--- a/blog/templates/article/index.html
+++ b/blog/templates/article/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>Ana Sayfa</title>
+
 </head>
 <body>
+
 <h3>Ana sayfa</h3>
+<p>naberasdfasd fasdf a</p>
 </body>
 </html>
