--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -1,5 +1,8 @@
 {% extends 'layout.html' %}
 
 {% block body%}
-
+{% include 'navbar.html' %}
+<div class="bg bg-info text-center m-3 p-3 rounded">
+    <h3>Blog Sayfasına Hoş Geldiniz</h3>
+</div>
 {% endblock %}
