--- a/blog/templates/about.html
+++ b/blog/templates/about.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Hakkımızda</title>
-</head>
-<body>
+{% extends 'layout.html' %}
 
-</body>
-</html>
+{% block body%}
+{% include 'navbar.html' %}
+<div class="bg bg-info text-center m-3 p-3 rounded">
+    <h3>Hakkımızda</h3>
+</div>
+{% endblock %}
