--- a/blog/templates/navbar.html
+++ b/blog/templates/navbar.html
@@ -30,10 +30,8 @@
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Link</a>
         </li>
       </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+          <a class="btn btn-outline-success" href="/user/login"><i class="fas fa-sign-in-alt"></i> Giriş Yap</a>&nbsp;
+          <a class="btn btn-outline-primary" href="/user/register"></i><i class="fas fa-user-plus"></i> Kayıt Ol</a>
     </div>
   </div>
 </nav>
