--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -5,4 +5,9 @@
 <div class="bg bg-info text-center m-3 p-3 rounded">
     <h3>Blog Sayfasına Hoş Geldiniz</h3>
 </div>
+{% if messages %}
+    {% for message in messages %}
+    <div{% if message.tags %} class="alert alert-{{ message.tags }} m-3 p-3 rounded"{% endif %}>{{ message }}</div>
+    {% endfor %}
+{% endif %}
 {% endblock %}
