--- a/blog/templates/login.html
+++ b/blog/templates/login.html
@@ -18,8 +18,8 @@
                      <form method="post">
                        {% csrf_token %}
                         <div class="form-outline form-white mb-4">
-                           <input type="email" id="id_mail" name="mail" class="form-control form-control-lg" />
-                           <label class="form-label">Mail</label>
+                           <input type="text" id="id_username" name="username" class="form-control form-control-lg" />
+                           <label class="form-label">Kullanıcı Adı</label>
                         </div>
                         <div class="form-outline form-white mb-4">
                            <input type="password" id="id_password" name="password" class="form-control form-control-lg" />
