--- a/blog/templates/login.html
+++ b/blog/templates/login.html
@@ -3,11 +3,11 @@
 {% include 'navbar.html' %}
 {% if messages %}
 {% for message in messages %}
-<div{% if message.tags %} class="alert alert-{{ message.tags }} m-3 p-3 rounded"{% endif %}>{{ message }}</div>
+<div{% if message.tags %} class="alert alert-{{ message.tags }} m-3 p-3 rounded"{% endif %}><i class="fas fa-exclamation-triangle"></i> {{ message }}</div>
 {% endfor %}
 {% endif %}
-<section class="vh-100 gradient-custom">
-   <div class="container py-5 h-100">
+<section class="vh-100 bg-image" style="background-image: url('https://images6.alphacoders.com/100/1009152.jpg');">
+   <div class="container h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
          <div class="col-12 col-md-8 col-lg-6 col-xl-5">
             <div class="card bg-dark text-white" style="border-radius: 1rem;">
