--- a/blog/templates/register.html
+++ b/blog/templates/register.html
@@ -7,7 +7,7 @@
     <div class="container h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-          <div class="card" style="border-radius: 15px;">
+          <div class="card bg-dark text-white" style="border-radius: 15px;">
             <div class="card-body p-5">
               <h2 class="text-uppercase text-center mb-5">Hesap Oluştur</h2>
 
@@ -41,7 +41,7 @@
                     id="form2Example3cg"
                   />
                   <label class="form-check-label" for="form2Example3g">
-                    I agree all statements in <a href="#!" class="text-body"><u>Terms of service</u></a>
+                    I agree all statements in <a href="#!" class="text-body"><u class="text-white">Terms of service</u></a>
                   </label>
                 </div>
 
@@ -49,7 +49,7 @@
                   <button type="submit" class="btn btn-success btn-block btn-lg gradient-custom-4 text-body"><i class="fas fa-check"></i> Kayıt Ol </button>
                 </div>
 
-                <p class="text-center text-muted mt-5 mb-0">Zaten hesabın var mı, <a href="#!" class="fw-bold text-body"><u>Giriş Yap</u></a></p>
+                <p class="text-center text-muted mt-5 mb-0">Zaten hesabın var mı, <a href="#!" class="fw-bold text-body"><u class="text-white">Giriş Yap</u></a></p>
 
               </form>
 
