--- a/blog/templates/navbar.html
+++ b/blog/templates/navbar.html
@@ -1,37 +1,41 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar scroll</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+   <div class="container-fluid">
+      <a class="navbar-brand" href="#">Navbar scroll</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarScroll">
-      <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-        <li class="nav-item">
-          <a class="btn btn-outline-primary" aria-current="page" href="/"><i class="fa fa-home" aria-hidden="true"></i> Ana Sayfa</a>
-        </li>&nbsp;
-        <li class="nav-item">
-          <a class="btn btn-outline-warning" href="/about"><i class="fas fa-stream"></i> Hakkımızda</a>
-        </li>&nbsp;
-        <li class="nav-item">
-          <a class="btn btn-outline-info" href="#"><i class="fas fa-clipboard-list"></i> Makaleler</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Link
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another Action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Link</a>
-        </li>
-      </ul>
-          <a class="btn btn-outline-success" href="/user/login"><i class="fas fa-sign-in-alt"></i> Giriş Yap</a>&nbsp;
-          <a class="btn btn-outline-primary" href="/user/register"></i><i class="fas fa-user-plus"></i> Kayıt Ol</a>
-    </div>
-  </div>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarScroll">
+         <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+            <li class="nav-item">
+               <a class="btn btn-outline-primary" aria-current="page" href="/"><i class="fa fa-home" aria-hidden="true"></i> Ana Sayfa</a>
+            </li>
+            &nbsp;
+            <li class="nav-item">
+               <a class="btn btn-outline-warning" href="/about"><i class="fas fa-stream"></i> Hakkımızda</a>
+            </li>
+            &nbsp;
+            <li class="nav-item">
+               <a class="btn btn-outline-info" href="#"><i class="fas fa-clipboard-list"></i> Makaleler</a>
+            </li>
+            <li class="nav-item">
+               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Link</a>
+            </li>
+         </ul>
+         {% if request.user.is_authenticated %}
+         <div class="dropdown">
+            <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="fas fa-user"></i> Hesabım
+            </button>
+            <ul class="dropdown-menu dropdown-menu-lg-end" aria-labelledby="dropdownMenuButton1">
+               <li><a class="dropdown-item" href="#">Ayarlar</a></li>
+               <li><a class="dropdown-item" href="#">Çıkış Yap</a></li>
+               <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+         </div>
+         {% else %}
+         <a class="btn btn-outline-success" href="/user/login"><i class="fas fa-sign-in-alt"></i> Giriş Yap</a>&nbsp;
+         <a class="btn btn-outline-primary" href="/user/register"></i><i class="fas fa-user-plus"></i> Kayıt Ol</a>
+         {% endif %}
+      </div>
+   </div>
 </nav>
