--- a/blog/templates/register.html
+++ b/blog/templates/register.html
@@ -40,7 +40,7 @@
                     value=""
                     id="form2Example3cg"
                   />
-                  <label class="form-check-label" for="form2Example3g">
+                  <label class="form-check-label">
                     I agree all statements in <a href="#!" class="text-body"><u class="text-white">Terms of service</u></a>
                   </label>
                 </div>
@@ -49,7 +49,7 @@
                   <button type="submit" class="btn btn-success btn-block btn-lg gradient-custom-4 text-body"><i class="fas fa-check"></i> Kayıt Ol </button>
                 </div>
 
-                <p class="text-center text-muted mt-5 mb-0">Zaten hesabın var mı, <a href="#!" class="fw-bold text-body"><u class="text-white">Giriş Yap</u></a></p>
+                <p class="text-center text-muted mt-5 mb-0">Zaten hesabın var mı, <a href="" class="fw-bold text-body"><u class="text-white">Giriş Yap</u></a></p>
 
               </form>
 
