--- a/blog/templates/register.html
+++ b/blog/templates/register.html
@@ -5,6 +5,11 @@
 <section class="vh-100 bg-image" style="background-image: url('https://images6.alphacoders.com/994/994203.jpg');">
   <div class="mask d-flex align-items-center h-100 gradient-custom-3">
     <div class="container h-100">
+      {% if messages %}
+    {% for message in messages %}
+    <div{% if message.tags %} class="alert alert-{{ message.tags }} m-3 p-3 rounded"{% endif %}>{{ message }}</div>
+    {% endfor %}
+{% endif %}
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-9 col-lg-7 col-xl-6">
           <div class="card bg-dark text-white" style="border-radius: 15px;">
