--- a/blog/templates/navbar.html
+++ b/blog/templates/navbar.html
@@ -1,3 +1,4 @@
+{% load static %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-light">
    <div class="container-fluid">
       <a class="navbar-brand" href="#">Django Blog</a>
@@ -11,20 +12,22 @@
             </li>
             &nbsp;
             <li class="nav-item">
-               <a class="btn btn-outline-warning" href="/about"><i class="fas fa-stream"></i> Hakkımızda</a>
+               <a class="btn btn-outline-warning" href="{% url 'about' %}"><i class="fas fa-stream"></i> Hakkımızda</a>
             </li>
             &nbsp;
             <li class="nav-item">
-               <a class="btn btn-outline-info" href="#"><i class="fas fa-clipboard-list"></i> Makaleler</a>
+               <a class="btn btn-outline-info" href="/articles/dashboard"><i class="fas fa-clipboard-list"></i> Makaleler</a>
             </li>
          </ul>
          {% if request.user.is_authenticated %}
+         <a class="btn btn-success"><i class="fas fa-pencil-alt"></i> Makale Yaz</a>&nbsp;
          <div class="dropdown">
             <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="fas fa-user"></i> Hesabım
             </button>
             <ul class="dropdown-menu dropdown-menu-lg-end" aria-labelledby="dropdownMenuButton1">
                <li><a class="dropdown-item" href="#"><i class="fas fa-user-cog" style="color:#313538"></i> Ayarlar</a></li>
+               <li><a class="dropdown-item" href="#"><i class="fas fa-clipboard-list" style="color:#149911"></i> Makalelerim</a></li>
                <li><button class="dropdown-item" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="fas fa-sign-out-alt" style="color:red"></i> Çıkış Yap</button></li>
             </ul>
          </div>
