--- a/blog/templates/navbar.html
+++ b/blog/templates/navbar.html
@@ -62,7 +62,7 @@
     <div class="modal-content">
       <div class="modal-header">
                   <img src="https://cdn-icons.flaticon.com/png/512/3079/premium/3079967.png?token=exp=1634665909~hmac=be834a8d3f3360d3dc3b79b5b1e4f849" width="100" alt="">
-        <h5 class="modal-title" id=""><i class="fas fa-pencil-ruler"></i> Yeni Makale Oluştur</h5>
+        <h5 class="modal-title" id=""> Yeni Makale Oluştur</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -79,7 +79,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-danger" data-bs-dismiss="modal"><i class="fas fa-times"></i> Kapat</button>
-        <button type="button" class="btn btn-primary"><i class="far fa-save"></i> Makale Oluştur</button>
+        <button type="button" class="btn btn-primary"><i class="fas fa-pencil-alt"></i> Makale Oluştur</button>
       </div>
     </div>
   </div>
