--- a/blog/templates/navbar.html
+++ b/blog/templates/navbar.html
@@ -56,7 +56,7 @@
       </div>
    </div>
 </div>
-<form method="post">
+<form method="post" action="/articles/addArticle/">
     {% csrf_token %}
 <div class="modal fade" id="openAddArticle" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
