--- a/blog/templates/navbar.html
+++ b/blog/templates/navbar.html
@@ -28,7 +28,7 @@
             </button>
             <ul class="dropdown-menu dropdown-menu-lg-end" aria-labelledby="dropdownMenuButton1">
                <li><a class="dropdown-item" href="#"><i class="fas fa-user-cog" style="color:#313538"></i> Ayarlar</a></li>
-               <li><a class="dropdown-item" href="#"><i class="fas fa-clipboard-list" style="color:#149911"></i> Makalelerim</a></li>
+               <li><a class="dropdown-item" href="/profile/articles/"><i class="fas fa-clipboard-list" style="color:#149911"></i> Makalelerim</a></li>
                <li><button class="dropdown-item" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="fas fa-sign-out-alt" style="color:red"></i> Çıkış Yap</button></li>
             </ul>
          </div>
