--- a/blog/templates/userArticles.html
+++ b/blog/templates/userArticles.html
@@ -31,9 +31,9 @@
   {%for article in articles %}
     <tr>
       <th scope="row">{{article.id}}</th>
-      <td><div class="d-grid gap-2"><a class="btn btn-outline-light" href="/articles/article/{{article.id}}">{{article.title}}</a></div></td>
+      <td><div class="d-grid gap-2"><a class="btn btn-outline-light" href="/articles/details/{{article.id}}">{{article.title}}</a></div></td>
       <td><div class="d-grid gap-2"><a class="btn btn-outline-info"><i class="fas fa-calendar-alt"></i> {{article.createdDate}}</a></div></td>
-      <td><div class="d-grid gap-2"><a class="btn btn-outline-primary" href="/articles/article/{{article.id}}"><i class="far fa-eye"></i> Detaylar</a></div></td>
+      <td><div class="d-grid gap-2"><a class="btn btn-outline-primary" href="/articles/details/{{article.id}}"><i class="far fa-eye"></i> Detaylar</a></div></td>
       <td><div class="d-grid gap-2"><a class="btn btn-outline-warning" href="/articles/update/{{article.id}}"><i class="fas fa-pencil-alt"></i> Düzenle</a></div></td>
       <td><div class="d-grid gap-2"><a class="btn btn-outline-danger" href="/articles/delete/{{article.id}}"><i class="fas fa-trash"></i> Sil</a></div></td>
     </tr>
