--- a/blog/templates/userArticles.html
+++ b/blog/templates/userArticles.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% load static %}
 {% block styles %}
-<link rel="stylesheet" href="{% static 'css/dashboardStyle.css' %}">
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
 {% endblock%}
 {% block body%}
 {% include 'navbar.html' %}
@@ -12,7 +12,7 @@
     {% endfor %}
 {% endif %}
 {% if articles %}
-<div class="card text-center">
+<div class="card text-center article-table">
 <table class="table table-hover table-dark">
   <thead>
     <tr>
