--- a/blog/templates/navbar.html
+++ b/blog/templates/navbar.html
@@ -16,7 +16,7 @@
             </li>
             &nbsp;
             <li class="nav-item">
-               <a class="btn btn-outline-info" href="/articles/dashboard"><i class="fas fa-clipboard-list"></i> Makaleler</a>
+               <a class="btn btn-outline-info" href="/articles/article-categorie/"><i class="fas fa-clipboard-list"></i> Makaleler</a>
             </li>
          </ul>
          {% if request.user.is_authenticated %}
