--- a/blog/templates/navbar.html
+++ b/blog/templates/navbar.html
@@ -56,24 +56,24 @@
       </div>
    </div>
 </div>
-<form method="post" action="/articles/addArticle/">
+<form method="post" action="/articles/addArticle/" enctype="multipart/form-data">
     {% csrf_token %}
 <div class="modal fade" id="openAddArticle" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-                  <img src="https://cdn-icons.flaticon.com/png/512/3079/premium/3079967.png?token=exp=1634665909~hmac=be834a8d3f3360d3dc3b79b5b1e4f849" width="100" alt="">
-        <h5 class="modal-title" id=""> Yeni Makale Oluştur</h5>
+         <img src="https://cdn-icons.flaticon.com/png/512/3079/premium/3079967.png?token=exp=1634665909~hmac=be834a8d3f3360d3dc3b79b5b1e4f849" width="100" alt="">
+        <h5 class="modal-title"> Yeni Makale Oluştur</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
           <div class="mb-3">
             <label class="col-form-label">Makale Başlığı:</label>
-            <input type="text" class="form-control" name="title" id="id_title">
+            <input type="text" class="form-control" name="title" id="id_title" required>
           </div>
           <div class="mb-3">
             <label class="col-form-label">Makale Açıklaması:</label>
-            <textarea class="form-control" name="content" id="id_content"></textarea>
+            <textarea class="form-control" name="content" id="id_content" required></textarea>
           </div>
              <div class="mb-3">
               <input class="form-control" type="file" name="articleImage" id="id_articleImage">
