--- a/blog/templates/userArticles.html
+++ b/blog/templates/userArticles.html
@@ -45,7 +45,7 @@
   </tbody>
 </table>
 </div>
-{% else %}
+{% else %}<br>
 <div class="card text-center">
 <div class="alert alert-danger" role="alert">
   <h4 class="alert-heading">Üzgünüz Hiç Makaleniz Bulunmuyor</h4>
