--- a/blog/templates/navbar.html
+++ b/blog/templates/navbar.html
@@ -20,10 +20,9 @@
             </li>
          </ul>
          {% if request.user.is_authenticated %}
-
-        <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#openAddArticle"><i class="fas fa-pencil-alt"></i> Makale Yaz</button>&nbsp;
+         <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#openAddArticle"><i class="fas fa-pencil-alt"></i> Makale Yaz</button>&nbsp;
          <div class="dropdown">
-             <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+            <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="fas fa-user"></i> Hesabım
             </button>
             <ul class="dropdown-menu dropdown-menu-lg-end" aria-labelledby="dropdownMenuButton1">
@@ -57,33 +56,43 @@
    </div>
 </div>
 <form method="post" action="/articles/addArticle/" enctype="multipart/form-data">
-    {% csrf_token %}
-<div class="modal fade" id="openAddArticle" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-         <img src="https://cdn-icons.flaticon.com/png/512/3079/premium/3079967.png?token=exp=1634665909~hmac=be834a8d3f3360d3dc3b79b5b1e4f849" width="100" alt="">
-        <h5 class="modal-title"> Yeni Makale Oluştur</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-          <div class="mb-3">
-            <label class="col-form-label">Makale Başlığı:</label>
-            <input type="text" class="form-control" name="title" id="id_title" required>
-          </div>
-          <div class="mb-3">
-            <label class="col-form-label">Makale Açıklaması:</label>
-            <textarea class="form-control" name="content" id="id_content" required></textarea>
-          </div>
-             <div class="mb-3">
-              <input class="form-control" type="file" name="articleImage" id="id_articleImage">
+   {% csrf_token %}
+   <div class="modal fade" id="openAddArticle" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+         <div class="modal-content">
+            <div class="modal-header">
+               <img src="https://cdn-icons.flaticon.com/png/512/3079/premium/3079967.png?token=exp=1634665909~hmac=be834a8d3f3360d3dc3b79b5b1e4f849" width="100" alt="">
+               <h5 class="modal-title"> Yeni Makale Oluştur</h5>
+               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
+            <div class="modal-body">
+               <div class="mb-3">
+                  <label class="col-form-label">Makale Başlığı:</label>
+                  <input type="text" class="form-control" name="title" id="id_title" required>
+               </div>
+               <div class="mb-3">
+                  <label class="col-form-label">Makale Açıklaması:</label>
+                  <textarea class="form-control" name="content" id="id_content" required></textarea>
+                  <br>
+                  <select class="form-control" name="Atype" id="id_Atype">
+                     <option selected>Makale Türü</option>
+                     <option value="1">Film</option>
+                     <option value="2">Müzik</option>
+                     <option value="3">Oyun</option>
+                     <option value="4">Kitap</option>
+                     <option value="5">Sağlık</option>
+                     <option value="6">Bilişim</option>
+                  </select>
+               </div>
+               <div class="mb-3">
+                  <input class="form-control" type="file" name="articleImage" id="id_articleImage">
+               </div>
+            </div>
+            <div class="modal-footer">
+               <button type="button" class="btn btn-danger" data-bs-dismiss="modal"><i class="fas fa-times"></i> Kapat</button>
+               <button type="submit" class="btn btn-primary"><i class="fas fa-pencil-alt"></i> Makale Oluştur</button>
+            </div>
+         </div>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-bs-dismiss="modal"><i class="fas fa-times"></i> Kapat</button>
-          <button type="submit" class="btn btn-primary"><i class="fas fa-pencil-alt"></i> Makale Oluştur</button>
-      </div>
-    </div>
-  </div>
-</div>
+   </div>
 </form>
