--- a/blog/templates/detailArticle.html
+++ b/blog/templates/detailArticle.html
@@ -15,7 +15,7 @@
    <div class="bg bg-info text-center m-3 p-3 rounded">
       <div class="heading"></div>
       <h1 class="heading__title">Makaleler</h1>
-      <p class="heading__credits">Makale Kategorileri</p>
+      <p class="heading__credits">{{article.Atype}}</p>
    </div>
 
 
