--- a/blog/templates/articleCategories.html
+++ b/blog/templates/articleCategories.html
@@ -18,51 +18,51 @@
    </div>
    <div class="cards">
       <div class="card card-1">
-         <a href="" style="text-decoration:none;">
+         <a href="/articles/categorie/1" style="text-decoration:none;">
             <div class="card__icon"><i class="fas fa-film"></i></div>
             <h2 class="card__title">Filmler ile ilgili yazılmış makaleler</h2>
             <p class="card__apply"><br><br>
-         <a class="card__link" href="#">Şimdi Oku <i class="fas fa-arrow-right"></i></a>
+         <a class="card__link" href="/articles/categorie/1">Şimdi Oku <i class="fas fa-arrow-right"></i></a>
          </p></a>
       </div>
       <div class="card card-2">
-        <a href="" style="text-decoration:none;">
+        <a href="/articles/categorie/2" style="text-decoration:none;">
          <div class="card__icon"><i class="fas fa-music"></i></div>
          <h2 class="card__title">Müzikler ile ilgili yazılmış makaleler</h2>
          <p class="card__apply"><br><br>
-            <a class="card__link" href="#">Şimdi Oku <i class="fas fa-arrow-right"></i></a>
+            <a class="card__link" href="/articles/categorie/2">Şimdi Oku <i class="fas fa-arrow-right"></i></a>
          </p></a>
       </div>
       <div class="card card-3">
-         <a href="" style="text-decoration:none;">
+         <a href="/articles/categorie/3" style="text-decoration:none;">
          <div class="card__icon"><i class="fas fa-gamepad"></i></div>
          <h2 class="card__title">Oyunlar ile ilgili yazılmış makaleler</h2>
          <p class="card__apply"><br><br>
-            <a class="card__link" href="#">Şimdi Oku <i class="fas fa-arrow-right"></i></a>
+            <a class="card__link" href="/articles/categorie/3">Şimdi Oku <i class="fas fa-arrow-right"></i></a>
          </p></a>
       </div>
       <div class="card card-4">
-         <a href="" style="text-decoration:none;">
+         <a href="/articles/categorie/4" style="text-decoration:none;">
          <div class="card__icon"><i class="fas fa-book"></i></div>
          <h2 class="card__title">Kitaplar ile ilgili yazılmış makaleler</h2>
          <p class="card__apply"><br><br>
-            <a class="card__link" href="#">Şimdi Oku <i class="fas fa-arrow-right"></i></a>
+            <a class="card__link" href="/articles/categorie/4">Şimdi Oku <i class="fas fa-arrow-right"></i></a>
          </p></a>
       </div>
       <div class="card card-5">
-          <a href="" style="text-decoration:none;">
+          <a href="/articles/categorie/5" style="text-decoration:none;">
          <div class="card__icon"><i class="fas fa-heartbeat"></i></div>
          <h2 class="card__title">Sağlık konusu ile ilgili yazılmış makaleler</h2>
          <p class="card__apply"><br><br>
-            <a class="card__link" href="#">Şimdi Oku <i class="fas fa-arrow-right"></i></a>
+            <a class="card__link" href="/articles/categorie/5">Şimdi Oku <i class="fas fa-arrow-right"></i></a>
          </p></a>
       </div>
       <div class="card card-1">
-          <a href="" style="text-decoration:none;">
+          <a href="/articles/categorie/6" style="text-decoration:none;">
          <div class="card__icon"><i class="fas fa-laptop-code"></i></div>
          <h2 class="card__title">Bilişim ile ilgili yazılmış makaleler</h2>
          <p class="card__apply"><br><br>
-            <a class="card__link" href="#">Şimdi Oku <i class="fas fa-arrow-right"></i></a>
+            <a class="card__link" href="/articles/categorie/6">Şimdi Oku <i class="fas fa-arrow-right"></i></a>
          </p></a>
       </div>
    </div>
