--- a/blog/templates/articlesCAT.html
+++ b/blog/templates/articlesCAT.html
@@ -5,51 +5,60 @@
 {% endblock%}
 {% block body%}
 {% include 'navbar.html' %}
-
 {% if messages %}
-    {% for message in messages %}
-    <div{% if message.tags %} class="alert alert-{{ message.tags }} m-3 p-3 rounded"{% endif %}>{{ message }}</div>
-    {% endfor %}
+{% for message in messages %}
+<div{% if message.tags %} class="alert alert-{{ message.tags }} m-3 p-3 rounded"{% endif %}>{{ message }}</div>
+{% endfor %}
 {% endif %}
 {% if articles %}<br>
-
-  <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-0 col-md-1 col-lg-1 col-xl-9">
-          <div class="card bg-dark text-white" style="border-radius: 15px;">
-            <div class="card-body p-5">
-
-<table class="table table-hover table-dark">
-  <thead>
-    <tr>
-      <th scope="col">Yazar</th>
-      <th scope="col">Makale Başlığı</th>
-      <th scope="col">Detaylar</th>
-      <th scope="col">Oluşturma Tarihi</th>
-    </tr>
-  </thead>
-  <tbody>
-  <!-- MAKALE BAŞLANGICI -->
-  {%for article in articles %}
-    <tr>
-      <th scope="row"><div class="d-grid gap-2"><a class="btn btn-warning">{{article.author}}</a></div></th>
-      <td><div class="d-grid gap-2"><a class="btn btn-outline-light" href="/articles/details/{{article.id}}">{{article.title}}</a></div></td>
-      <td><div class="d-grid gap-2"><a class="btn btn-outline-primary" href="/articles/details/{{article.id}}"><i class="far fa-eye"></i> Detaylar</a></div></td>
-      <td><div class="d-grid gap-2"><a class="btn btn-outline-info" href=""><i class="fas fa-calendar-alt"></i> {{article.createdDate}}</a></div></td>
-
-
-    </tr>
-  {%endfor%}
-  <!-- MAKALE BİTİŞİ -->
-  </tbody>
-</table>
+<div class="row d-flex justify-content-center align-items-center h-100">
+<div class="col-0 col-md-1 col-lg-1 col-xl-9">
+<div class="card bg-dark text-white" style="border-radius: 15px;">
+<div class="card-body p-5">
+    <form style="display:block">
+       <div class="input-group">
+          <input class="form-control border-end-0 border rounded-pill" type="search" name="keyword" placeholder="Makale Ara">&nbsp;<button class="btn btn-outline-primary bg-white border-bottom-0 border rounded-pill ms-n5" type="submit">
+          <i class="fa fa-search"></i>
+          </button>
+       </div>
+    </form>
+   <table class="table table-hover table-dark">
+      <thead>
+         <tr>
+            <th scope="col">Yazar</th>
+            <th scope="col">Makale Başlığı</th>
+            <th scope="col">Detaylar</th>
+            <th scope="col">Oluşturma Tarihi</th>
+         </tr>
+      </thead>
+      <tbody>
+         <!-- MAKALE BAŞLANGICI -->
+         {%for article in articles %}
+         <tr>
+            <th scope="row">
+               <div class="d-grid gap-2"><a class="btn btn-warning">{{article.author}}</a></div>
+            </th>
+            <td>
+               <div class="d-grid gap-2"><a class="btn btn-outline-light" href="/articles/details/{{article.id}}">{{article.title}}</a></div>
+            </td>
+            <td>
+               <div class="d-grid gap-2"><a class="btn btn-outline-primary" href="/articles/details/{{article.id}}"><i class="far fa-eye"></i> Detaylar</a></div>
+            </td>
+            <td>
+               <div class="d-grid gap-2"><a class="btn btn-outline-info" href=""><i class="fas fa-calendar-alt"></i> {{article.createdDate}}</a></div>
+            </td>
+         </tr>
+         {%endfor%}
+         <!-- MAKALE BİTİŞİ -->
+      </tbody>
+   </table>
 </div>
-
 {% else %}<br>
 <div class="card text-center">
-<div class="alert alert-danger" role="alert">
-  <h4 class="alert-heading">Üzgünüz Hiç Makaleniz Bulunmuyor</h4>
-  <p>Makale oluşturmak için lütfen sağ üstten "Makale Yaz" butonuna basınız.</p>
-</div></div>
+   <div class="alert alert-danger" role="alert">
+      <h4 class="alert-heading">Üzgünüz Hiç Makaleniz Bulunmuyor</h4>
+      <p>Makale oluşturmak için lütfen sağ üstten "Makale Yaz" butonuna basınız.</p>
+   </div>
+</div>
 {% endif %}
-
 {% endblock %}
