--- a/blog/templates/detailArticle.html
+++ b/blog/templates/detailArticle.html
@@ -2,10 +2,71 @@
 {% load static %}
 {% block styles %}
 <link rel="stylesheet" href="{% static 'css/articledetails.css' %}">
+<style>body{}
+   .comment-wrapper .panel-body {
+   max-height:650px;
+   overflow:auto;
+   }
+   .comment-wrapper .media-list .media img {
+   width:64px;
+   height:64px;
+   border:2px solid #e5e7e8;
+   }
+   .comment-wrapper .media-list .media {
+   border-bottom:1px dashed #efefef;
+   margin-bottom:25px;
+   }
+   body{
+    background:#eee;
+}
+@media (min-width: 0) {
+    .g-mr-15 {
+        margin-right: 1.07143rem !important;
+    }
+}
+@media (min-width: 0){
+    .g-mt-3 {
+        margin-top: 0.21429rem !important;
+    }
+}
+
+.g-height-50 {
+    height: 50px;
+}
+
+.g-width-50 {
+    width: 50px !important;
+}
+
+@media (min-width: 0){
+    .g-pa-30 {
+        padding: 2.14286rem !important;
+    }
+}
+
+.g-bg-secondary {
+    background-color: #fafafa !important;
+}
+
+.u-shadow-v18 {
+    box-shadow: 0 5px 10px -6px rgba(0, 0, 0, 0.15);
+}
+
+.g-color-gray-dark-v4 {
+    color: #777 !important;
+}
+
+.g-font-size-12 {
+    font-size: 0.85714rem !important;
+}
+
+.media-comment {
+    margin-top:20px
+}
+</style>
 {% endblock%}
 {% block body%}
 {% include 'navbar.html' %}
-
 {% if messages %}
 {% for message in messages %}
 <div{% if message.tags %} class="alert alert-{{ message.tags }} m-3 p-3 rounded"{% endif %}>{{ message }}</div>
@@ -17,18 +78,61 @@
       <h1 class="heading__title">Makaleler</h1>
       <p class="heading__credits">{{article.Atype}}</p>
    </div>
-
-
    <div class="cards">
       <div class="card card-1">
          <a href="" style="text-decoration:none;">
             <div class="card__icon"><i class="fas fa-clipboard-list"></i></div>
-            <h2 class="card__title">{{article.title}}</h2><p style="color:white;">{{article.content}}</p>
+            <h2 class="card__title">{{article.title}}</h2>
+            <p style="color:white;">{{article.content}}</p>
             <p class="card__apply"><br><br>
-         Yazar: <a class="card__link" href="#">{{article.author}}</a>
+               Yazar:
+         <a class="card__link" href="#">{{article.author}}</a>
          </p></a>
       </div>
-   </div><img src="/media/{{article.articleImage}}" alt="" width="700px">
+   </div>
+   <img src="/media/{{article.articleImage}}" alt="" width="700px">
 </center>
+</div>
+<div class="container w-50 p-3">
+   <div class="row align-items-start">
+      <div class="col">
+         <div class="panel-body">
+            <textarea class="form-control" placeholder="Yorum Yap" rows="3"></textarea>
+            <br>
+            <button type="button" class="btn btn-info pull-right" style="float:right;color:white;">Yorum Yap</button>
+            <div class="clearfix"></div>
+         </div>
+      </div>
+   </div>
+   <div class="media g-mb-30 media-comment">
+            <img class="d-flex g-width-50 g-height-50 rounded-circle g-mt-3 g-mr-15" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Image Description">
+            <div class="media-body u-shadow-v18 g-bg-secondary g-pa-30">
+              <div class="g-mb-15">
+                <h5 class="h5 g-color-gray-dark-v1 mb-0">John Doe</h5>
+                <span class="g-color-gray-dark-v4 g-font-size-12">5 days ago</span>
+              </div>
+
+              <p>YORUM IÇERİĞİ</p>
+
+              <ul class="list-inline d-sm-flex my-0">
+                <li class="list-inline-item g-mr-20">
+                  <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" style="text-decoration:none" href="#!">
+                    <i class="fa fa-thumbs-up g-pos-rel g-top-1 g-mr-3" style="color:green"></i>
+                    178
+                  </a>
+                </li>
+                <li class="list-inline-item g-mr-20">
+                  <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" style="text-decoration:none" href="#!">
+                    <i class="fa fa-thumbs-down g-pos-rel g-top-1 g-mr-3" style="color:red"></i>
+                    34
+                  </a>
+                </li>
+              </ul>
+            </div>
+        </div>
+    </div>
+
+
+
 
 {% endblock %}
